jlamontSC-test/src/objects/College__c.object
<CustomObject>
    <description>Object to track Colleges</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address from Fed School Code List</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City from Fed School Code List</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country from Fed School Code List</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>PostalCode from Fed School Code List</description>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>Province from Fed School Code List</description>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Code__c</fullName>
        <description>SchoolCode from Fed School Code List</description>
        <externalId>true</externalId>
        <label>School Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>StateCode from Fed School Code List</description>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>ZipCode from Fed School Code List</description>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>College</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School_Code__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>